<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentCard">

    <TextView
        android:id="@+id/bck5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="45dp"
        android:text="@string/confirm1Back"
        android:textColor="@color/brown"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView69"
        android:layout_width="360dp"
        android:layout_height="100dp"
        android:background="@drawable/box_2"
        android:text="@string/pay1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/textView71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payText1"
        android:textColor="@color/brown"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView69"
        app:layout_constraintEnd_toEndOf="@+id/textView69"
        app:layout_constraintStart_toStartOf="@+id/textView69"
        app:layout_constraintTop_toTopOf="@+id/textView69"
        app:layout_constraintVertical_bias="0.358"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="10dp"
        android:text="@string/payText2"
        android:textColor="@color/ash"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView69"
        app:layout_constraintTop_toBottomOf="@+id/textView71"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/payText3"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView69" />

    <Button
        android:id="@+id/button9"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/navyblue"
        android:text="@string/payBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="340dp"
        android:layout_height="175dp"
        android:contentDescription="@string/payImg1"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView75"
        app:layout_constraintVertical_bias="0.058"
        app:srcCompat="@drawable/img_27" />

    <TextView
        android:id="@+id/textView76"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/payText4"
        android:textColor="@color/brown"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView27" />

    <TextView
        android:id="@+id/textView77"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:importantForAutofill="no"
        android:text="@string/payText5"
        android:textColor="@color/brown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView76" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:hint="@string/payHint1"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView77"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:importantForAutofill="no"
        android:text="@string/payText6"
        android:textColor="@color/brown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText6" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:hint="@string/payHint2"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView78"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/payHText7"
        android:textColor="@color/brown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText7" />

    <TextView
        android:id="@+id/textView80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:autofillHints=""
        android:text="@string/payText8"
        android:textColor="@color/brown"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView79"
        app:layout_constraintTop_toBottomOf="@+id/editTextText7" />

    <EditText
        android:id="@+id/editTextText8"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:hint="@string/payHint3"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView79"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextText9"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/payHint4"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/editTextText8"
        app:layout_constraintTop_toBottomOf="@+id/textView80"
        tools:ignore="Autofill" />
</androidx.constraintlayout.widget.ConstraintLayout>