<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProviderProfile">

    <TextView
        android:id="@+id/textView112"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/profileText4"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/custom_circ"
        android:contentDescription="@string/person1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_20" />

    <ImageView
        android:id="@+id/imageView39"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="65dp"
        android:contentDescription="@string/profileVec4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView103"
        app:srcCompat="@drawable/baseline_edit_note_24" />

    <TextView
        android:id="@+id/textView109"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:text="@string/profileVec3Text1"
        android:textColor="@color/brown"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView42"
        app:layout_constraintTop_toBottomOf="@+id/textView108" />

    <TextView
        android:id="@+id/textView108"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/profileVec2Text2"
        android:textColor="@color/brown"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView41"
        app:layout_constraintTop_toBottomOf="@+id/textView107" />

    <TextView
        android:id="@+id/textView104"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/profileText4"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView33" />

    <TextView
        android:id="@+id/textView106"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/profileVec1Text2"
        android:textColor="@color/brown"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView40"
        app:layout_constraintTop_toBottomOf="@+id/textView105" />

    <TextView
        android:id="@+id/textView107"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:text="@string/profileVec2Text1"
        android:textColor="@color/brown"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView41"
        app:layout_constraintTop_toBottomOf="@+id/textView106" />

    <ImageView
        android:id="@+id/imageView42"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/profileVec3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView41"
        app:srcCompat="@drawable/baseline_calendar_today_24" />

    <TextView
        android:id="@+id/textView101"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/profile2Text1"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView33"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

    <TextView
        android:id="@+id/textView105"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/profileVec1Text1"
        android:textColor="@color/brown"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView40"
        app:layout_constraintTop_toBottomOf="@+id/textView104" />

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/profileVec1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView104"
        app:srcCompat="@drawable/baseline_email_24" />

    <ImageView
        android:id="@+id/imageView41"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/profileVec2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView40"
        app:srcCompat="@drawable/baseline_local_phone_24" />

    <TextView
        android:id="@+id/textView102"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/profileText2"
        android:textColor="@color/brown"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView33"
        app:layout_constraintTop_toBottomOf="@+id/textView101" />

    <TextView
        android:id="@+id/textView103"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/profileText3"
        android:textColor="@color/brown"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView33"
        app:layout_constraintTop_toBottomOf="@+id/textView102" />

    <TextView
        android:id="@+id/textView110"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/profileVec3Text2"
        android:textColor="@color/brown"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView42"
        app:layout_constraintTop_toBottomOf="@+id/textView109" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/green"
        android:text="@string/profile2Btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button15"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/navyblue"
        android:text="@string/profile2Btn2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/textView111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/profile2Text2"
        app:layout_constraintStart_toEndOf="@+id/imageView33"
        app:layout_constraintTop_toBottomOf="@+id/textView103" />

    <TextView
        android:id="@+id/textView116"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/profile2Text4"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView110" />

    <TextView
        android:id="@+id/textView121"
        android:layout_width="327dp"
        android:layout_height="83dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/fill_box"
        android:text="@string/profile2Text3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView116" />

    <TextView
        android:id="@+id/textView122"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/profile2Text6"
        android:textColor="@color/brown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView121"
        app:layout_constraintTop_toTopOf="@+id/textView121" />

    <TextView
        android:id="@+id/textView123"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="@string/profile2Text8"
        android:textColor="@color/brown"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView121"
        app:layout_constraintTop_toTopOf="@+id/textView121" />

    <TextView
        android:id="@+id/textView124"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/profile2Text5"
        android:textColor="@color/brown"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView121"
        app:layout_constraintTop_toBottomOf="@+id/textView122" />

    <TextView
        android:id="@+id/textView125"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:text="@string/profile2Text7"
        android:textColor="@color/brown"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView121"
        app:layout_constraintTop_toBottomOf="@+id/textView123" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/pro_bottom_menu"
        tools:ignore="VisualLintBottomNav" />

    <ImageView
        android:id="@+id/imageView48"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="26dp"
        android:contentDescription="@string/profileService2"
        app:layout_constraintBottom_toTopOf="@+id/button15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView168"
        app:srcCompat="@drawable/img_35" />

    <TextView
        android:id="@+id/textView168"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/profileService"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView121" />

</androidx.constraintlayout.widget.ConstraintLayout>